fix mic in filter()

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,9 @@ Main.py
 parameter*.py
 test/STOPZO_superlattice/* 
 .vscode/*
+
+# test code
+ferrodispcalc/1.vasp
+ferrodispcalc/nl.dat
+ferrodispcalc/test.py
+ferrodispcalc/Sc8_0.vasp
