--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,10 @@
         "typeindex": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "dense": "cpp"
+        "dense": "cpp",
+        "strstream": "cpp",
+        "cfenv": "cpp",
+        "source_location": "cpp",
+        "stdfloat": "cpp"
     }
 }
