--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [build-system]
-requires = ["scikit-build-core>=0.10", "pybind11", "setuptools>=42", "wheel"]
-build-backend = "scikit_build_core.build"
+requires = ["pybind11", "setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "ferrodispcalc"
 version = "0.1.0"
-description = "FerroDispCalc (FDC) is a calculator for displacement, polarization in ferroelectrics."
+description = "FerroDispCalc (FDC) is a pre and post-processing tool for simulation of ferroelectrics"
 readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.10"
@@ -20,8 +20,6 @@ dependencies = [
     "numpy",
 ]
 classifiers = [
-  "Development Status :: 4 - Beta",
-  "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
