--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["pybind11", "setuptools>=42", "wheel"]
+requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "FerroDispCalc (FDC) is a pre and post-processing tool for simulation of ferroelectrics"
 readme = "README.md"
 license = {file = "LICENSE"}
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 keywords = ["ferroelectrics", "md", "workflow"]
 authors = [
     {name = "Denan LI", email = "lidenan@westlake.edu.cn"}
@@ -22,6 +22,7 @@ dependencies = [
 ]
 classifiers = [
   "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
